// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Babel transpile can transpile jsx fragment 1`] = `
Object {
  "type": "RIGHT",
  "value": Object {
    "code": "var App = function App(props) {
  return React.createElement(React.Fragment, null, React.createElement(View, {
    style: { ...props.style,
      backgroundColor: '#FFFFFF'
    },
    layout: {
      layoutSystem: 'pinSystem'
    },
    \\"data-uid\\": \\"aaa\\"
  }));
};",
    "sourceMap": Object {
      "file": "test.js",
      "mappings": "AAcEA,IAAAA,GAAAA,GAAAA,SAAAA,GAAAA,CAAAA,KAAAA,EAAAA;AACDA,SACcC,0CACJD,oBAAAA,IAAAA;AACJA,IAAAA,KAAAA,EAAAA,EAAAA,GAAAA,KAAAA,CAAAA,KAAAA;AAAAA,MAAAA,eAAAA,EAAAA;AAAAA,KADIA;AAECA,IAAAA,MAAAA,EAAAA;AAAAA,MAAAA,YAAAA,EAAAA;AAAAA,KAFDA;AAGFE,gBAAaC;AAHXH,IADIC,CADdD;AASKI,CAVJJ",
      "names": Array [
        "
",
        " ",
        "style",
        "props",
        "/",
      ],
      "sources": Array [
        "/utopia/storyboard.js",
      ],
      "sourcesContent": Array [
        "
import * as React from 'react'
import { View, jsx } from 'utopia-api'

export var canvasMetadata = {
  scenes: [
    {
      component: 'App',
      frame: { height: 812, left: 0, width: 375, top: 0 },
      props: { layout: { top: 0, left: 0, bottom: 0, right: 0 } },
      container: { layoutSystem: 'pinSystem' },
    },
  ],
  elementMetadata: {},
}

export var App = (props) => {
  return (
    <>
      <View
        style={{ ...props.style, backgroundColor: '#FFFFFF' }}
        layout={{ layoutSystem: 'pinSystem' }}
        data-uid='aaa'
      ></View>
    </>
  )
}
",
      ],
      "version": 3,
    },
  },
}
`;

exports[`JSX parser parses back and forth as a function, with an arbitrary piece of JavaScript 1`] = `
Object {
  "combinedTopLevelArbitraryBlock": Object {
    "definedElsewhere": Array [
      "utopiaCanvasJSXLookup",
    ],
    "definedWithin": Array [
      "cakeFn",
      "otherFn",
    ],
    "elementsWithin": Object {},
    "javascript": "function cakeFn(n) {
  return n
}
function otherFn(n) {
  return n
}",
    "sourceMap": Object {
      "file": "code.tsx",
      "mappings": "AAYCA,SAASC,MAATD,CAAgBE,CAAhBF,EAAmBG;AACjBC,SAAOF,CAAPE;AACDC;;AACDL,SAASM,OAATN,CAAiBE,CAAjBF,EAAoBG;AAClBC,SAAOF,CAAPE;AACFG",
      "names": Array [
        "function",
        "cakeFn",
        "n",
        "{",
        "return",
        "
",
        "otherFn",
        "}",
      ],
      "sources": Array [
        "code.tsx",
      ],
      "sourcesContent": Array [
        "import { cake } from 'cake'
import * as React from 'react'
import {
  UtopiaUtils,
  Ellipse,
  Image,
  Rectangle,
  Storyboard,
  Text,
  View,
  Scene,
} from 'utopia-api'
function cakeFn(n) {
  return n
}
function otherFn(n) {
  return n
}
export var whatever = (props) => {
  return (
    <View data-uid='aaa'>
      <cake
        data-uid='aab'
        left={cakeFn(otherFn('b') + 2)}
      />
    </View>
  )
}
",
      ],
      "version": 3,
    },
    "transpiledJavascript": "function cakeFn(n) {
  return n;
}

function otherFn(n) {
  return n;
}
return { cakeFn: cakeFn, otherFn: otherFn };",
    "type": "ARBITRARY_JS_BLOCK",
    "uniqueID": "",
  },
  "exportsDetail": Object {
    "defaultExport": null,
    "namedExports": Object {
      "whatever": Object {
        "type": "EXPORT_DETAIL_MODIFIER",
      },
    },
  },
  "highlightBounds": Object {
    "aaa": Object {
      "endCol": 11,
      "endLine": 25,
      "startCol": 4,
      "startLine": 20,
      "uid": "aaa",
    },
    "aab": Object {
      "endCol": 8,
      "endLine": 24,
      "startCol": 6,
      "startLine": 21,
      "uid": "aab",
    },
  },
  "imports": Object {
    "cake": Object {
      "importedAs": null,
      "importedFromWithin": Array [
        Object {
          "alias": "cake",
          "name": "cake",
        },
      ],
      "importedWithName": null,
    },
    "react": Object {
      "importedAs": "React",
      "importedFromWithin": Array [],
      "importedWithName": null,
    },
    "utopia-api": Object {
      "importedAs": null,
      "importedFromWithin": Array [
        Object {
          "alias": "UtopiaUtils",
          "name": "UtopiaUtils",
        },
        Object {
          "alias": "Ellipse",
          "name": "Ellipse",
        },
        Object {
          "alias": "Image",
          "name": "Image",
        },
        Object {
          "alias": "Rectangle",
          "name": "Rectangle",
        },
        Object {
          "alias": "Storyboard",
          "name": "Storyboard",
        },
        Object {
          "alias": "Text",
          "name": "Text",
        },
        Object {
          "alias": "View",
          "name": "View",
        },
        Object {
          "alias": "Scene",
          "name": "Scene",
        },
      ],
      "importedWithName": null,
    },
  },
  "jsxFactoryFunction": null,
  "topLevelElements": Array [
    Object {
      "importStarAs": false,
      "importWithName": false,
      "imports": Array [
        "cake",
      ],
      "module": "cake",
      "rawCode": "import { cake } from 'cake'",
      "type": "IMPORT_STATEMENT",
    },
    Object {
      "rawCode": "
",
      "type": "UNPARSED_CODE",
    },
    Object {
      "importStarAs": true,
      "importWithName": false,
      "imports": Array [],
      "module": "react",
      "rawCode": "import * as React from 'react'",
      "type": "IMPORT_STATEMENT",
    },
    Object {
      "rawCode": "
",
      "type": "UNPARSED_CODE",
    },
    Object {
      "importStarAs": false,
      "importWithName": false,
      "imports": Array [
        "UtopiaUtils",
        "Ellipse",
        "Image",
        "Rectangle",
        "Storyboard",
        "Text",
        "View",
        "Scene",
      ],
      "module": "utopia-api",
      "rawCode": "import {
  UtopiaUtils,
  Ellipse,
  Image,
  Rectangle,
  Storyboard,
  Text,
  View,
  Scene,
} from 'utopia-api'",
      "type": "IMPORT_STATEMENT",
    },
    Object {
      "rawCode": "
",
      "type": "UNPARSED_CODE",
    },
    Object {
      "definedElsewhere": Array [
        "utopiaCanvasJSXLookup",
      ],
      "definedWithin": Array [
        "cakeFn",
      ],
      "elementsWithin": Object {},
      "javascript": "function cakeFn(n) {
  return n
}",
      "sourceMap": Object {
        "file": "code.tsx",
        "mappings": "AAYCA,SAASC,MAATD,CAAgBE,CAAhBF,EAAmBG;AACjBC,SAAOF,CAAPE;AACFC",
        "names": Array [
          "function",
          "cakeFn",
          "n",
          "{",
          "return",
          "}",
        ],
        "sources": Array [
          "code.tsx",
        ],
        "sourcesContent": Array [
          "import { cake } from 'cake'
import * as React from 'react'
import {
  UtopiaUtils,
  Ellipse,
  Image,
  Rectangle,
  Storyboard,
  Text,
  View,
  Scene,
} from 'utopia-api'
function cakeFn(n) {
  return n
}
function otherFn(n) {
  return n
}
export var whatever = (props) => {
  return (
    <View data-uid='aaa'>
      <cake
        data-uid='aab'
        left={cakeFn(otherFn('b') + 2)}
      />
    </View>
  )
}
",
        ],
        "version": 3,
      },
      "transpiledJavascript": "function cakeFn(n) {
  return n;
}
return { cakeFn: cakeFn };",
      "type": "ARBITRARY_JS_BLOCK",
      "uniqueID": "",
    },
    Object {
      "rawCode": "
",
      "type": "UNPARSED_CODE",
    },
    Object {
      "definedElsewhere": Array [
        "utopiaCanvasJSXLookup",
      ],
      "definedWithin": Array [
        "otherFn",
      ],
      "elementsWithin": Object {},
      "javascript": "function otherFn(n) {
  return n
}",
      "sourceMap": Object {
        "file": "code.tsx",
        "mappings": "AAeCA,SAASC,OAATD,CAAiBE,CAAjBF,EAAoBG;AAClBC,SAAOF,CAAPE;AACFC",
        "names": Array [
          "function",
          "otherFn",
          "n",
          "{",
          "return",
          "}",
        ],
        "sources": Array [
          "code.tsx",
        ],
        "sourcesContent": Array [
          "import { cake } from 'cake'
import * as React from 'react'
import {
  UtopiaUtils,
  Ellipse,
  Image,
  Rectangle,
  Storyboard,
  Text,
  View,
  Scene,
} from 'utopia-api'
function cakeFn(n) {
  return n
}
function otherFn(n) {
  return n
}
export var whatever = (props) => {
  return (
    <View data-uid='aaa'>
      <cake
        data-uid='aab'
        left={cakeFn(otherFn('b') + 2)}
      />
    </View>
  )
}
",
        ],
        "version": 3,
      },
      "transpiledJavascript": "function otherFn(n) {
  return n;
}
return { otherFn: otherFn };",
      "type": "ARBITRARY_JS_BLOCK",
      "uniqueID": "",
    },
    Object {
      "rawCode": "
",
      "type": "UNPARSED_CODE",
    },
    Object {
      "arbitraryJSBlock": null,
      "blockOrExpression": "block",
      "declarationSyntax": "var",
      "isFunction": true,
      "name": "whatever",
      "param": Object {
        "boundParam": Object {
          "defaultExpression": null,
          "paramName": "props",
          "type": "REGULAR_PARAM",
        },
        "dotDotDotToken": false,
        "type": "PARAM",
      },
      "propsUsed": Array [],
      "returnStatementComments": Object {
        "leadingComments": Array [],
        "trailingComments": Array [],
      },
      "rootElement": Object {
        "children": Array [
          Object {
            "children": Array [],
            "name": Object {
              "baseVariable": "cake",
              "propertyPath": Object {
                "propertyElements": Array [],
              },
            },
            "props": Array [
              Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "key": "data-uid",
                "type": "JSX_ATTRIBUTES_ENTRY",
                "value": Object {
                  "comments": Object {
                    "leadingComments": Array [],
                    "trailingComments": Array [],
                  },
                  "type": "ATTRIBUTE_VALUE",
                  "value": "aab",
                },
              },
              Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "key": "left",
                "type": "JSX_ATTRIBUTES_ENTRY",
                "value": Object {
                  "definedElsewhere": Array [
                    "cakeFn",
                    "otherFn",
                  ],
                  "javascript": "cakeFn(otherFn('b') + 2)",
                  "sourceMap": Object {
                    "file": "code.tsx",
                    "mappings": "OAuBeA,MAAOC,QAAQC,CAACC,GAADD,CAARD,GAAgBG,CAAhBH,CAAPD",
                    "names": Array [
                      "cakeFn",
                      "otherFn",
                      "'",
                      "b",
                      ")",
                    ],
                    "sources": Array [
                      "code.tsx",
                    ],
                    "sourcesContent": Array [
                      "import { cake } from 'cake'
import * as React from 'react'
import {
  UtopiaUtils,
  Ellipse,
  Image,
  Rectangle,
  Storyboard,
  Text,
  View,
  Scene,
} from 'utopia-api'
function cakeFn(n) {
  return n
}
function otherFn(n) {
  return n
}
export var whatever = (props) => {
  return (
    <View data-uid='aaa'>
      <cake
        data-uid='aab'
        left={cakeFn(otherFn('b') + 2)}
      />
    </View>
  )
}
",
                    ],
                    "version": 3,
                  },
                  "transpiledJavascript": "return cakeFn(otherFn('b') + 2);",
                  "type": "ATTRIBUTE_OTHER_JAVASCRIPT",
                  "uniqueID": "",
                },
              },
            ],
            "type": "JSX_ELEMENT",
            "uid": "aab",
          },
        ],
        "name": Object {
          "baseVariable": "View",
          "propertyPath": Object {
            "propertyElements": Array [],
          },
        },
        "props": Array [
          Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "key": "data-uid",
            "type": "JSX_ATTRIBUTES_ENTRY",
            "value": Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "type": "ATTRIBUTE_VALUE",
              "value": "aaa",
            },
          },
        ],
        "type": "JSX_ELEMENT",
        "uid": "aaa",
      },
      "type": "UTOPIA_JSX_COMPONENT",
      "usedInReactDOMRender": false,
    },
    Object {
      "rawCode": "
",
      "type": "UNPARSED_CODE",
    },
  ],
  "type": "PARSE_SUCCESS",
}
`;

exports[`JSX parser parses fine with a circular dependency. 1`] = `
Object {
  "combinedTopLevelArbitraryBlock": Object {
    "definedElsewhere": Array [
      "utopiaCanvasJSXLookup",
    ],
    "definedWithin": Array [
      "a",
      "b",
    ],
    "elementsWithin": Object {},
    "javascript": "const a = (n) => n > 0 ? n : b(10)
const b = (n) => n > 0 ? n : a(10)",
    "sourceMap": Object {
      "file": "code.tsx",
      "mappings": "AAICA,IAAMC,CAACC,GAAGC,SAAJF,CAAIE,CAACC,CAADD;AAAAA,SAAOC,CAACF,GAAGG,CAAJD,GAAQA,CAARA,GAAYE,CAACH,CAACI,EAADJ,CAApBA;AAAAA,CAAVH;;AAEAA,IAAMM,CAACJ,GAAGC,SAAJG,CAAIH,CAACC,CAADD;AAAAA,SAAOC,CAACF,GAAGG,CAAJD,GAAQA,CAARA,GAAYH,CAACE,CAACI,EAADJ,CAApBA;AAAAA,CAAVH",
      "names": Array [
        "const",
        "a",
        " ",
        "(",
        "n",
        "0",
        "b",
        "10",
      ],
      "sources": Array [
        "code.tsx",
      ],
      "sourcesContent": Array [
        "import * as React from \\"react\\";
import {
  View
} from \\"utopia-api\\";
const a = (n) => n > 0 ? n : b(10)
export var whatever = (props) => <View data-uid='aaa' />
const b = (n) => n > 0 ? n : a(10)
",
      ],
      "version": 3,
    },
    "transpiledJavascript": "var a = function a(n) {
  return n > 0 ? n : b(10);
};

var b = function b(n) {
  return n > 0 ? n : a(10);
};
return { a: a, b: b };",
    "type": "ARBITRARY_JS_BLOCK",
    "uniqueID": "",
  },
  "exportsDetail": Object {
    "defaultExport": null,
    "namedExports": Object {
      "whatever": Object {
        "type": "EXPORT_DETAIL_MODIFIER",
      },
    },
  },
  "highlightBounds": Object {
    "aaa": Object {
      "endCol": 56,
      "endLine": 5,
      "startCol": 33,
      "startLine": 5,
      "uid": "aaa",
    },
  },
  "imports": Object {
    "react": Object {
      "importedAs": "React",
      "importedFromWithin": Array [],
      "importedWithName": null,
    },
    "utopia-api": Object {
      "importedAs": null,
      "importedFromWithin": Array [
        Object {
          "alias": "View",
          "name": "View",
        },
      ],
      "importedWithName": null,
    },
  },
  "jsxFactoryFunction": null,
  "topLevelElements": Array [
    Object {
      "importStarAs": true,
      "importWithName": false,
      "imports": Array [],
      "module": "react",
      "rawCode": "import * as React from \\"react\\";",
      "type": "IMPORT_STATEMENT",
    },
    Object {
      "rawCode": "
",
      "type": "UNPARSED_CODE",
    },
    Object {
      "importStarAs": false,
      "importWithName": false,
      "imports": Array [
        "View",
      ],
      "module": "utopia-api",
      "rawCode": "import {
  View
} from \\"utopia-api\\";",
      "type": "IMPORT_STATEMENT",
    },
    Object {
      "rawCode": "
",
      "type": "UNPARSED_CODE",
    },
    Object {
      "definedElsewhere": Array [
        "b",
        "utopiaCanvasJSXLookup",
      ],
      "definedWithin": Array [
        "a",
      ],
      "elementsWithin": Object {},
      "javascript": "const a = (n) => n > 0 ? n : b(10)",
      "sourceMap": Object {
        "file": "code.tsx",
        "mappings": "AAICA,IAAMC,CAACC,GAAGC,SAAJF,CAAIE,CAACC,CAADD;AAAAA,SAAOC,CAACF,GAAGG,CAAJD,GAAQA,CAARA,GAAYE,CAACH,CAACI,EAADJ,CAApBA;AAAAA,CAAVH",
        "names": Array [
          "const",
          "a",
          " ",
          "(",
          "n",
          "0",
          "b",
          "10",
        ],
        "sources": Array [
          "code.tsx",
        ],
        "sourcesContent": Array [
          "import * as React from \\"react\\";
import {
  View
} from \\"utopia-api\\";
const a = (n) => n > 0 ? n : b(10)
export var whatever = (props) => <View data-uid='aaa' />
const b = (n) => n > 0 ? n : a(10)
",
        ],
        "version": 3,
      },
      "transpiledJavascript": "var a = function a(n) {
  return n > 0 ? n : b(10);
};
return { a: a };",
      "type": "ARBITRARY_JS_BLOCK",
      "uniqueID": "",
    },
    Object {
      "rawCode": "
",
      "type": "UNPARSED_CODE",
    },
    Object {
      "arbitraryJSBlock": null,
      "blockOrExpression": "expression",
      "declarationSyntax": "var",
      "isFunction": true,
      "name": "whatever",
      "param": Object {
        "boundParam": Object {
          "defaultExpression": null,
          "paramName": "props",
          "type": "REGULAR_PARAM",
        },
        "dotDotDotToken": false,
        "type": "PARAM",
      },
      "propsUsed": Array [],
      "returnStatementComments": Object {
        "leadingComments": Array [],
        "trailingComments": Array [],
      },
      "rootElement": Object {
        "children": Array [],
        "name": Object {
          "baseVariable": "View",
          "propertyPath": Object {
            "propertyElements": Array [],
          },
        },
        "props": Array [
          Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "key": "data-uid",
            "type": "JSX_ATTRIBUTES_ENTRY",
            "value": Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "type": "ATTRIBUTE_VALUE",
              "value": "aaa",
            },
          },
        ],
        "type": "JSX_ELEMENT",
        "uid": "aaa",
      },
      "type": "UTOPIA_JSX_COMPONENT",
      "usedInReactDOMRender": false,
    },
    Object {
      "rawCode": "
",
      "type": "UNPARSED_CODE",
    },
    Object {
      "definedElsewhere": Array [
        "a",
        "utopiaCanvasJSXLookup",
      ],
      "definedWithin": Array [
        "b",
      ],
      "elementsWithin": Object {},
      "javascript": "const b = (n) => n > 0 ? n : a(10)",
      "sourceMap": Object {
        "file": "code.tsx",
        "mappings": "AAMCA,IAAMC,CAACC,GAAGC,SAAJF,CAAIE,CAACC,CAADD;AAAAA,SAAOC,CAACF,GAAGG,CAAJD,GAAQA,CAARA,GAAYE,CAACH,CAACI,EAADJ,CAApBA;AAAAA,CAAVH",
        "names": Array [
          "const",
          "b",
          " ",
          "(",
          "n",
          "0",
          "a",
          "10",
        ],
        "sources": Array [
          "code.tsx",
        ],
        "sourcesContent": Array [
          "import * as React from \\"react\\";
import {
  View
} from \\"utopia-api\\";
const a = (n) => n > 0 ? n : b(10)
export var whatever = (props) => <View data-uid='aaa' />
const b = (n) => n > 0 ? n : a(10)
",
        ],
        "version": 3,
      },
      "transpiledJavascript": "var b = function b(n) {
  return n > 0 ? n : a(10);
};
return { b: b };",
      "type": "ARBITRARY_JS_BLOCK",
      "uniqueID": "",
    },
    Object {
      "rawCode": "
",
      "type": "UNPARSED_CODE",
    },
  ],
  "type": "PARSE_SUCCESS",
}
`;

exports[`JSX parser parses the code when it has a JSX block with an object defined inside 1`] = `
Object {
  "combinedTopLevelArbitraryBlock": Object {
    "definedElsewhere": Array [
      "utopiaCanvasJSXLookup",
    ],
    "definedWithin": Array [
      "a",
    ],
    "elementsWithin": Object {},
    "javascript": "const a = \\"cake\\"",
    "sourceMap": Object {
      "file": "code.tsx",
      "mappings": "AAWCA,IAAMC,CAACC,GAAGC,MAAVH",
      "names": Array [
        "const",
        "a",
        " ",
        "\\"",
      ],
      "sources": Array [
        "code.tsx",
      ],
      "sourcesContent": Array [
        "import * as React from \\"react\\";
import {
  UtopiaUtils,
  Ellipse,
  Image,
  Rectangle,
  Storyboard,
  Text,
  View,
  Scene
} from \\"utopia-api\\";
const a = \\"cake\\"
export var App = (props) => <View data-uid='bbb'>
  {{a: a}}
</View>
",
      ],
      "version": 3,
    },
    "transpiledJavascript": "var a = \\"cake\\";
return { a: a };",
    "type": "ARBITRARY_JS_BLOCK",
    "uniqueID": "",
  },
  "exportsDetail": Object {
    "defaultExport": null,
    "namedExports": Object {
      "App": Object {
        "type": "EXPORT_DETAIL_MODIFIER",
      },
    },
  },
  "highlightBounds": Object {
    "bbb": Object {
      "endCol": 7,
      "endLine": 14,
      "startCol": 28,
      "startLine": 12,
      "uid": "bbb",
    },
  },
  "imports": Object {
    "react": Object {
      "importedAs": "React",
      "importedFromWithin": Array [],
      "importedWithName": null,
    },
    "utopia-api": Object {
      "importedAs": null,
      "importedFromWithin": Array [
        Object {
          "alias": "UtopiaUtils",
          "name": "UtopiaUtils",
        },
        Object {
          "alias": "Ellipse",
          "name": "Ellipse",
        },
        Object {
          "alias": "Image",
          "name": "Image",
        },
        Object {
          "alias": "Rectangle",
          "name": "Rectangle",
        },
        Object {
          "alias": "Storyboard",
          "name": "Storyboard",
        },
        Object {
          "alias": "Text",
          "name": "Text",
        },
        Object {
          "alias": "View",
          "name": "View",
        },
        Object {
          "alias": "Scene",
          "name": "Scene",
        },
      ],
      "importedWithName": null,
    },
  },
  "jsxFactoryFunction": null,
  "topLevelElements": Array [
    Object {
      "importStarAs": true,
      "importWithName": false,
      "imports": Array [],
      "module": "react",
      "rawCode": "import * as React from \\"react\\";",
      "type": "IMPORT_STATEMENT",
    },
    Object {
      "rawCode": "
",
      "type": "UNPARSED_CODE",
    },
    Object {
      "importStarAs": false,
      "importWithName": false,
      "imports": Array [
        "UtopiaUtils",
        "Ellipse",
        "Image",
        "Rectangle",
        "Storyboard",
        "Text",
        "View",
        "Scene",
      ],
      "module": "utopia-api",
      "rawCode": "import {
  UtopiaUtils,
  Ellipse,
  Image,
  Rectangle,
  Storyboard,
  Text,
  View,
  Scene
} from \\"utopia-api\\";",
      "type": "IMPORT_STATEMENT",
    },
    Object {
      "rawCode": "
",
      "type": "UNPARSED_CODE",
    },
    Object {
      "definedElsewhere": Array [
        "utopiaCanvasJSXLookup",
      ],
      "definedWithin": Array [
        "a",
      ],
      "elementsWithin": Object {},
      "javascript": "const a = \\"cake\\"",
      "sourceMap": Object {
        "file": "code.tsx",
        "mappings": "AAWCA,IAAMC,CAACC,GAAGC,MAAVH",
        "names": Array [
          "const",
          "a",
          " ",
          "\\"",
        ],
        "sources": Array [
          "code.tsx",
        ],
        "sourcesContent": Array [
          "import * as React from \\"react\\";
import {
  UtopiaUtils,
  Ellipse,
  Image,
  Rectangle,
  Storyboard,
  Text,
  View,
  Scene
} from \\"utopia-api\\";
const a = \\"cake\\"
export var App = (props) => <View data-uid='bbb'>
  {{a: a}}
</View>
",
        ],
        "version": 3,
      },
      "transpiledJavascript": "var a = \\"cake\\";
return { a: a };",
      "type": "ARBITRARY_JS_BLOCK",
      "uniqueID": "",
    },
    Object {
      "rawCode": "
",
      "type": "UNPARSED_CODE",
    },
    Object {
      "arbitraryJSBlock": null,
      "blockOrExpression": "expression",
      "declarationSyntax": "var",
      "isFunction": true,
      "name": "App",
      "param": Object {
        "boundParam": Object {
          "defaultExpression": null,
          "paramName": "props",
          "type": "REGULAR_PARAM",
        },
        "dotDotDotToken": false,
        "type": "PARAM",
      },
      "propsUsed": Array [],
      "returnStatementComments": Object {
        "leadingComments": Array [],
        "trailingComments": Array [],
      },
      "rootElement": Object {
        "children": Array [
          Object {
            "definedElsewhere": Array [],
            "elementsWithin": Object {},
            "javascript": "({ a: a });",
            "originalJavascript": "{a: a}",
            "sourceMap": Object {
              "file": "code.tsx",
              "mappings": "OAAA,CAAC;AAAE,KAAH;AAAC,CAAD",
              "names": Array [],
              "sources": Array [
                "code.tsx",
              ],
              "sourcesContent": Array [
                "import * as React from \\"react\\";
import {
  UtopiaUtils,
  Ellipse,
  Image,
  Rectangle,
  Storyboard,
  Text,
  View,
  Scene
} from \\"utopia-api\\";
const a = \\"cake\\"
export var App = (props) => <View data-uid='bbb'>
  {{a: a}}
</View>
",
              ],
              "version": 3,
            },
            "transpiledJavascript": "return ({
  a: a
});",
            "type": "JSX_ARBITRARY_BLOCK",
            "uniqueID": "",
          },
        ],
        "name": Object {
          "baseVariable": "View",
          "propertyPath": Object {
            "propertyElements": Array [],
          },
        },
        "props": Array [
          Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "key": "data-uid",
            "type": "JSX_ATTRIBUTES_ENTRY",
            "value": Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "type": "ATTRIBUTE_VALUE",
              "value": "bbb",
            },
          },
        ],
        "type": "JSX_ELEMENT",
        "uid": "bbb",
      },
      "type": "UTOPIA_JSX_COMPONENT",
      "usedInReactDOMRender": false,
    },
    Object {
      "rawCode": "
",
      "type": "UNPARSED_CODE",
    },
  ],
  "type": "PARSE_SUCCESS",
}
`;

exports[`getHighlightBounds gets some bounds 1`] = `
Array [
  Object {
    "endCol": 15,
    "endLine": 29,
    "startCol": 8,
    "startLine": 18,
  },
]
`;

exports[`lintAndParse returns a syntax error from eslint when something is broken 1`] = `
Object {
  "diagnostics": null,
  "errorMessage": null,
  "errorMessages": Array [
    Object {
      "codeSnippet": "  16 |       return (
  17 |         <View
> 18 |           style={{ backgroundColor: \\"darkgrey\\", position: \\"absolute\\" }, ...hello}
     |                                                                         ^
  19 |         >
  20 |         </View>
  21 |       )",
      "endColumn": undefined,
      "endLine": undefined,
      "errorCode": null,
      "fileName": "test.js",
      "message": "Parsing error: Unexpected token",
      "passTime": 12345678,
      "severity": "fatal",
      "source": "eslint",
      "startColumn": 73,
      "startLine": 18,
      "type": "fatal",
    },
  ],
  "parsedJSONFailure": null,
  "type": "PARSE_FAILURE",
}
`;
